[Scorecards] Added fix for overflowing how is marked question section

--- a/scoring/static/scoring/scss/table-question-council.scss
+++ b/scoring/static/scoring/scss/table-question-council.scss
@@ -34,6 +34,10 @@
             background: lighten($color-scorecard-yellow, 30%) !important;
         }
     }
+
+    .how-is-marked-section {
+        max-width: 350px;
+    }
 }
 
 .top-tier-score {
